--- a/Best_Market_to_advertise_E-Learning_Product.ipynb
+++ b/Best_Market_to_advertise_E-Learning_Product.ipynb
@@ -20,15 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(18175, 136)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(18175, 136)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -40,7 +43,7 @@
     "\n",
     "pd.options.display.max_columns = 150 # to avoid truncated display\n",
     "fcc_data.head() # to analyse the data structure\n",
-    "print(fcc_data.shape) # to understand the number of rows and columns"
+    "fcc_data.shape # to understand the number of rows and columns"
    ]
   },
   {
@@ -346,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Identify the Outliers"
+    "# Identify the outliers"
    ]
   },
   {
@@ -425,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Identify the outlier continued..."
+    "# Identify the outliers continued..."
    ]
   },
   {
