--- a/Analyse Online Market for Advertisement.ipynb
+++ b/Analyse Online Market for Advertisement.ipynb
@@ -6474,7 +6474,9 @@
     "\n",
     "For the second market, we had to choose between India and Canada. To do this we used age as a parameter and understood that India could be a potential market. We decided to send our analysis to the marketing team and use their experience to make the final call.\n",
     "\n",
-    "Hope you enjoyed this project."
+    "Hope you enjoyed this project.\n",
+    "\n",
+    "Thank You!"
    ]
   }
  ],
